prefeat(UserInterface): mainfile and base class for the user interface

--- a/bin/air-watcher.conf
+++ b/bin/air-watcher.conf
@@ -1,2 +1,2 @@
-dataset-path = ../dataset   # relative to the air-watcher binary parent folder
+dataset-path = ../dataset   # relative or absolute path
 relative-difference-allowed = 0.1   # TODO
