--- a/bin/air-watcher.conf
+++ b/bin/air-watcher.conf
@@ -1,3 +1,3 @@
-dataset-path = ../test/dataset   # relative or absolute path
+dataset-path = ../test/dataset2   # relative or absolute path
 relative-difference-allowed = 0.1   # TODO
 default-radius = 1000     # km
