--- a/bin/air-watcher.conf
+++ b/bin/air-watcher.conf
@@ -1,3 +1,3 @@
 dataset-path = ../dataset   # relative or absolute path
-relative-difference-allowed = 0.1   # TODO
-default-radius = 10     # km    TODO
+relative-difference-allowed = 0.2
+default-radius = 75     # km
